Holding shiftkey while pressing backspace deletes text unexpectedly #36682

Closed
opened 2013-09-07 14:54:13 +02:00 by Joshua Leung · 4 comments
Member

%%%--- OS ---
Windows (Vista)

- Blender version with error, and version that worked ---

With error: 59761
Without error: 2.66/7 ?

- Short description of error ---

If shift-key is held while pressing backspace within a text field, all text within the text field is cleared.

Expected Behaviour:
Backspace only deletes a single character, even if shift is held.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

From the looks of things, it was intended that shift-backspace is intended to be a bit of a shortcut for deleting all text in a textfield (while ctrl-backspace deletes up to last space/underscore it seems). Unfortunately, the current behaviour appears to be completely inconsistent with all other textfields/textboxes in every widget toolkit I've ever encountered (Windows, GTK, Qt-Crossplatform, KDE/Qt, Android), and also many common text editors (Notepad++, Geany, Vim, GEdit, etc., as well as others such as Notepad and Wordpad on Windows).

The problem with this shortcut is that if you're currently holding down Shift as you've been entering some uppercase letters or special characters (underscores and symbols mainly), then realise you made a mistake in the previous character and press backspace to get rid of it (keep in mind that shift is still being held, as it seems like too much effort to release, delete 1-char mistake, and repress shift before starting to type again), you've now accidentally deleted all the text, probably without even realising why.
%%%

%%%--- OS --- Windows (Vista) - Blender version with error, and version that worked --- With error: 59761 Without error: 2.66/7 ? - Short description of error --- If shift-key is held while pressing backspace within a text field, all text within the text field is cleared. Expected Behaviour: Backspace only deletes a single character, even if shift is held. - Steps for others to reproduce the error (preferably based on attached .blend file) --- From the looks of things, it was intended that shift-backspace is intended to be a bit of a shortcut for deleting all text in a textfield (while ctrl-backspace deletes up to last space/underscore it seems). Unfortunately, the current behaviour appears to be completely inconsistent with all other textfields/textboxes in every widget toolkit I've ever encountered (Windows, GTK, Qt-Crossplatform, KDE/Qt, Android), and also many common text editors (Notepad++, Geany, Vim, GEdit, etc., as well as others such as Notepad and Wordpad on Windows). The problem with this shortcut is that if you're currently holding down Shift as you've been entering some uppercase letters or special characters (underscores and symbols mainly), then realise you made a mistake in the previous character and press backspace to get rid of it (keep in mind that shift is still being held, as it seems like too much effort to release, delete 1-char mistake, and repress shift before starting to type again), you've now accidentally deleted all the text, probably without even realising why. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Actually, SHIFT-backspace is the shortcut to reset any RNA control to its default value… I guess we should deactivate it when text widget is in “edit” mode?%%%

%%%Actually, SHIFT-backspace is the shortcut to reset any RNA control to its default value… I guess we should deactivate it when text widget is in “edit” mode?%%%

%%%It's an intentional feature it seems, also exists in 2.49. I've just removed it now, isn't particularly useful.%%%

%%%It's an intentional feature it seems, also exists in 2.49. I've just removed it now, isn't particularly useful.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36682
No description provided.