Fix #36682: disable shift+backspace shortcut to delete all text in text fields, it's too easy to hit accidentally and isn't a standard shortcut. Deleting all text is quite easy by just pressing backspace right after clicking the text field anyway.